# crypto_com_rest_client

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
client/: request.py
resources/: config-template.json
tests/: test_sample.py
